appId: host.exp.Exponent
---
- launchApp
- waitForAnimationToEnd
- tapOn: 'mentis-app'
- waitForAnimationToEnd
- waitForAnimationToEnd
- waitForAnimationToEnd
- tapOn: 'Acesse sua conta'
- tapOn: 'E-mail'
- inputText: ${TEST_MANAGER_EMAIL}
- tapOn: 'Senha'
- inputText: ${TEST_MANAGER_PASSWORD}
- tapOn: 'ENTRAR'
- assertVisible: 'Sair'
- assertVisible: 'Dashboard'
- assertVisible: 'Users'
- assertVisible: 'Settings'
