appId: host.exp.Exponent
---
- launchApp
- waitForAnimationToEnd
- tapOn: 'mentis-app'
- waitForAnimationToEnd
- waitForAnimationToEnd
- waitForAnimationToEnd
- tapOn: 'Acesse sua conta'
- tapOn: 'E-mail'
- inputText: ${TEST_ENTERPRISE_EMAIL}
- tapOn: 'Senha'
- inputText: ${TEST_ENTERPRISE_PASSWORD}
- tapOn: 'ENTRAR'
- assertVisible: 'Criar Nova Empresa'
- tapOn: 'Criar Nova Empresa'
- assertVisible: 'Nova Empresa'
- scroll
